# rustible

./: .env.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  bench_security  patch.diff  patch2.diff  test_output.txt  verify_fix  verify_fix_v2  verify_regex.rs
.Jules/: palette.md
.cargo/: audit.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: cloud_providers_completion.md  distributed_execution.md  drift_detection.md  jinja2_tests_completion.md  module_ecosystem_expansion.md  policy_as_code.md  rollback_integration.md  scale_testing.md  secret_management_integration.md  ssh_agent_forwarding.md  terraform_state_management.md  windows_support.md
.github/issues/: 001_performance_benchmarks.md  002_connection_pooling.md  003_adaptive_parallelism.md  004_rich_error_messages.md  005_lsp_server.md  006_pre_execution_validation.md  007_drift_detection.md  008_state_management.md  009_remote_state_backends.md  010_state_locking.md  011_module_parity.md  012_jinja2_filters.md  README.md
.github/workflows/: benchmarks.yml  ci.yml  docker.yml  high-risk-suites.yml  security.yml
.jules/: bolt.md  palette.md  sentinel.md
.rustible_state/: index.json
.rustible_state/snapshots/: 00064fbd-8d1e-44ef-84dc-47cf2b38dfba.json  00163187-cea9-435f-852a-32df904ae6e3.json  0048deec-d9bf-4c04-bf15-db6618f6d641.json  01d1c3c3-b50c-410f-bec5-18c783651f4f.json  01d516b2-7128-46a3-be2d-21150a53fcfb.json  021cfc9b-5adc-4b2a-b396-64dee05df4de.json  0239dcfc-2d22-4309-a2f8-a21ee9e142fa.json  02f069a0-a4f2-4a27-b913-dd32cb23204f.json  0392f9e1-3393-4620-8fd9-4911493d97ee.json  03a9c1fd-e923-4ea6-a24f-884042ed9312.json  03c0dd91-fa99-40a3-a20f-d7fcf4cde59a.json  03f6cc34-617e-4ba2-88fc-41c77f3c8bc1.json  044624b7-a2e1-44eb-8b4f-351bb9f4c312.json  0448b48f-c2ab-4562-bb79-e90f16d8d9a6.json  04e9d0b1-bb4d-4cfd-a4ee-0b6ddf560ff5.json  05439686-68fb-4376-b477-32bf9b0bedb6.json  05a54944-e0fc-443c-a377-bfcaa8953821.json  060d3798-bc06-42af-8190-cdea098cddc2.json  0611cf02-0e9e-460c-8280-bed69bc39738.json  06407943-5b72-40fa-a054-f0a0099de99d.json  0655f863-f7e1-4688-adb9-55de87be77b3.json  066c2be4-6558-4696-9357-40624117f3e0.json  074ad174-ea7c-499e-a697-7ef124a8c613.json  075ff1e9-03a3-4bfe-89e0-a376e3591344.json  07ff6d5b-0b4e-4619-9eca-8dbeb76f5acf.json  0840fd99-8a4e-4b64-a39c-67c8c59eb22f.json  08494bc9-93a5-4ea0-bad7-b0d9f10d64a2.json  08619d84-9eb8-48f2-8d52-96bdc0d0d971.json  0877be98-1ba5-4193-bdb3-4d91d9cddd50.json  08a0a3a6-d5aa-42c9-91ea-a8a18c3ee5b0.json  08c1d05a-3843-4384-9200-24123d09567e.json  094ea5b4-df41-4be5-bf1c-6e72e7f8bd26.json  09a08e7c-028d-4040-bbbe-eb574fdcb7b4.json  09a71cbd-fa57-4606-9dbf-61ae8fe96c34.json  09bd9eae-00fc-4da0-ab2d-ee45351ddd14.json  09d53dcb-2d01-46a3-992a-8387dbc01c30.json  0a2a2e23-aec6-4f05-9790-e5facdae7b26.json  0a2bfe2c-982f-496e-af06-6d6b97716f5e.json  0a47d21d-4ca3-4570-8180-654edffcdfc2.json  0a52defc-118d-40ac-ba06-33860f0bde3f.json  (+758 more)
atris/: MAP.md
benches/: ansible_comparison.rs  callback_bench.rs  callback_benchmark.rs  connection_pool_benchmark.rs  execution_benchmark.rs  hpc_scale_validation.rs  inventory_scale.rs  memory_benchmark.rs  module_benchmark.rs  parallel_benchmark.rs  performance_benchmark.rs  russh_benchmark.rs  sprint2_feature_benchmark.rs  ssh_pipelining_benchmark.rs  strategy_benchmark.rs  template_benchmark.rs  template_optimization_benchmark.rs  utils_benchmark.rs
benchmarks/: perf_budgets.toml
benchmarks/badges/: speedup.json
deploy/docker/: docker-compose.yml
deploy/notebook/: Makefile  QUICKSTART.md  README.md  inventory.yml  playbook.yml
docs/: ALPHA_LAUNCH_CHECKLIST.md  ALPHA_READINESS_ISSUES.md  AWS_RESEARCH_INDEX.md  BETA_ENTRY_CRITERIA.md  CHANGELOG.md  FAQ.md  FEATURE_STATUS.md  GITHUB_ISSUES_SUMMARY.md  MODULES_HEALTH.md  P0_EXECUTOR_ISSUES_ANALYSIS.md  P1_ISSUES_RESEARCH_REPORT.md  PR46_Russh_Update_Review.md  PR47_Security_Review.md  README.md  RESOURCE_PRIORITIES.md  ROADMAP.md  error_handling.md  index.md  scope-management-plan.md
docs/architecture/: 0001-architecture-overview.md  0002-module-system-design.md  ARCHITECTURE.md  IMPLEMENTATION_SPEC.md  INDEX.md  ansible-compat-gap.md  aws-resource-roadmap.md  awx-vault-integration.md  p0-features-design.md  p0-features-diagrams.md  p0-features-implementation-guide.md  p0-features-summary.md  provider-ecosystem.md  resource-graph-model.md
docs/compatibility/: ansible.md  execution-reliability-capabilities.md  jinja2-filters.md  modules-integrations-capabilities.md  provisioning-state-capabilities.md  terraform.md
docs/development/: BETA_SIGNOFF_REQUIREMENTS.md  CONTRIBUTING.md  callback-plugins.md  connection-plugins.md  custom-modules.md
docs/guides/: 01-introduction.md  05-modules.md  (+19 more)
examples/: playbook.yml  proxmox_vm_basic.yml  proxmox_vm_clone.yml  rich_error_demo.rs  rustible.toml
notes/: open-issues-closeout.md
scripts/: ssh-test-env.sh
src/: config.rs  error.rs  handlers.rs  lib.rs  lockfile.rs  main.rs  playbook.rs  retry.rs  strategy.rs  template.rs  tenant.rs  traits.rs  vault.rs
tests/: README.md  agent_mode_pilot_tests.rs  ansible_compat_tests.rs  ansible_output_compat_tests.rs  async_tests.rs  aws_provisioning_acceptance_tests.rs  become_security_tests.rs  become_tests.rs  block_tests.rs  cache_tests.rs  callback_concurrent_tests.rs  callback_edge_case_tests.rs  callback_factory_tests.rs  callback_fuzz_tests.rs  callback_integration_tests.rs  callback_output_capture_tests.rs  callback_plugin_tests.rs  callback_serialization_tests.rs  callback_tests.rs  callback_yaml_tests.rs  chaos_tests.rs  check_mode_tests.rs  cli_parity_tests.rs  cli_tests.rs  cloud_integration_tests.rs  conformance_tests.rs  connection_enhancement_tests.rs  connection_tests.rs  copy_module_tests.rs  database_integration_tests.rs  db_modules_parity_tests.rs  debug_module_tests.rs  delegate_tests.rs  delegation_tests.rs  diff_tests.rs  docs_compatibility_sync_tests.rs  drift_detection_file_package_service_tests.rs  e2e_docker_tests.rs  edge_case_tests.rs  executor_comprehensive_tests.rs  (+83 more)
(+833 files in other folders)
