[features]
default = ["russh", "local"]
# SSH backend using ssh2 crate (C/libssh2 wrapper) - legacy default
ssh2-backend = ["dep:ssh2"]
# SSH backend using russh crate (pure Rust) - recommended
russh = ["dep:russh", "dep:russh-sftp", "dep:russh-keys"]
local = []
docker = ["dep:bollard"]
kubernetes = ["dep:kube", "dep:k8s-openapi"]
# AWS cloud modules (EC2, S3, VPC, etc.) - requires optional AWS SDK
aws = ["dep:aws-config", "dep:aws-sdk-ec2", "dep:aws-sdk-s3", "dep:aws-sdk-iam"]
# Azure cloud modules (VMs, Resource Groups, Networking) - stub implementation
azure = []
# GCP cloud modules (Compute Engine, Networking) - stub implementation
gcp = []
# Database modules (PostgreSQL, MySQL, etc.) - stub implementation
database = []
# WinRM connection support (Windows Remote Management) - stub implementation
winrm = []
# HTTP client features with reqwest - stub implementation
reqwest = []
# Background warmup of lazy-initialized components
startup-warmup = []
# REST API server
api = ["dep:axum", "dep:tower-http", "dep:jsonwebtoken", "dep:futures-util"]
# Infrastructure provisioning (Terraform-like) - requires AWS SDK
provisioning = ["aws"]
# Full feature set with ssh2 backend
full = ["russh", "local", "ssh2-backend", "docker", "kubernetes"]
# Full feature set with all cloud providers
full-cloud = ["full", "aws", "azure", "gcp"]
# Full feature set with AWS (requires additional compile time)
full-aws = ["full", "aws"]
# Full feature set with provisioning
full-provisioning = ["full-aws", "provisioning"]
# Pure Rust build (no C dependencies)
pure-rust = ["russh", "local"]

[package]
name = "rustible"
version = "0.1.0"
edition = "2021"
authors = ["Rustible Contributors"]
description = "A modern, async-first configuration management and automation tool written in Rust - an Ansible alternative with better performance, type safety, and parallel execution"
license = "MIT"
repository = "https://github.com/rustible/rustible"
keywords = ["ansible", "automation", "configuration-management", "devops", "infrastructure"]
categories = ["command-line-utilities", "development-tools", "config"]
rust-version = "1.85"
readme = "README.md"

[lib]
name = "rustible"
path = "src/lib.rs"

[[bin]]
name = "rustible"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env", "cargo", "wrap_help"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
indexmap = { version = "2.1", features = ["serde"] }
regex = "1.10"
glob = "0.3"
globset = "0.4"
walkdir = "2.4"
shellexpand = "=3.1.0"  # Pin to avoid dirs 6.x which requires Rust 1.88+
shell-words = "1.1"
which = "5.0"  # Pin to avoid home 0.5.12 which requires Rust 1.88+
uuid = { version = "1.6", features = ["v4", "serde"] }
semver = "1.0"

# Template engine (Jinja2-compatible)
minijinja = { version = "2.0", features = ["loader", "builtins", "json"] }
tera = "1.19"

# Colored output and terminal UI
colored = "2.1"
indicatif = { version = "0.18", features = ["tokio"] }
console = "0.15"
dialoguer = "0.11"

# Configuration
config = "0.14"
dirs = "5.0"
home = "=0.5.9"  # Pin to avoid MSRV bump in 0.5.11+ (requires Rust 1.81+)

# Encryption for vault functionality
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1.1"

# SSH connectivity - pure Rust (russh)
# Updated to 0.54.1+ to fix CVE (overflow checks in channel windows adjust)
russh = { version = "0.54.1", optional = true }
russh-sftp = { version = "2.0", optional = true }
russh-keys = { version = "0.45", optional = true }
# SSH connectivity - C wrapper (ssh2/libssh2) - optional, legacy
ssh2 = { version = "0.9", optional = true }

# Efficient synchronization primitives
parking_lot = "0.12"
dashmap = "5"

# Lazy initialization
once_cell = "1.19"

# Async utilities
tokio-util = { version = "0.7", features = ["io", "codec"] }

# Diff and change detection
similar = "2.4"

# Parallel execution
rayon = "1.8"

# Graph algorithms for state dependency tracking
petgraph = "0.6"

# HTTP client for API modules
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
url = "2.5"
bytes = "1.5"

# Validation
validator = { version = "0.19", features = ["derive"] }

# CSV parsing for inventory
csv = "1.3"

# Docker support (optional)
bollard = { version = "0.16", optional = true }

# Kubernetes support (optional)
kube = { version = "2.0", features = ["runtime", "derive", "ws"], optional = true }
k8s-openapi = { version = "0.26", features = ["v1_30"], optional = true }

# AWS SDK support (optional)
aws-config = { version = "1.1", optional = true }
aws-sdk-ec2 = { version = "1.15", optional = true }
aws-sdk-s3 = { version = "1.15", optional = true }
aws-sdk-iam = { version = "1.15", optional = true }

# Hostname resolution
hostname = "0.3"

# Unix syslog support
libc = "0.2"

# File handling
filetime = "0.2.26"
zip = "2.2"

# Checksums for stat module
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"

# Archive support
flate2 = "1.0"
tar = "0.4"

# Terminal detection
is-terminal = "0.4"

# Unix/POSIX functionality
nix = { version = "0.29", features = ["user", "fs", "process", "signal", "term"] }

# Temporary file handling
tempfile = "3.9"

# REST API server (optional)
axum = { version = "0.7", features = ["macros", "ws"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
jsonwebtoken = { version = "9.3", optional = true }
futures-util = { version = "0.3", optional = true }
blake3 = "1.8.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
# Note: atty removed - use is-terminal instead (already in main dependencies)
urlencoding = "2.1"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
wiremock = "=0.6.2"  # Pin to avoid edition 2024 features in 0.6.3+ (requires Rust 1.85+)
proptest = "1.4"
# async-ssh2-tokio removed - conflicts with russh 0.54.x, only used in benchmarks
serial_test = "3.1"
ed25519-dalek = "2.0"

[[bench]]
name = "russh_benchmark"
harness = false
required-features = []

[[bench]]
name = "connection_pool_benchmark"
harness = false
required-features = ["russh"]

[[bench]]
name = "callback_benchmark"
harness = false

[[bench]]
name = "sprint2_feature_benchmark"
harness = false

# [[bench]]
# name = "execution_benchmark"
# harness = false

[[bench]]
name = "parallel_benchmark"
harness = false

[[bench]]
name = "template_benchmark"
harness = false

[[bench]]
name = "strategy_benchmark"
harness = false

[[bench]]
name = "module_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false

[[bench]]
name = "unified_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
